--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         
         <meta property="og:title" content="Academic CV - Ase Morales"/>
 
-        <meta property="og:description" content="Education, research, and experience of Irish Danielle 'Ase' Morales."/>
+        <meta property="og:description" content="Academic portfolio of Irish Danielle 'Ase' Morales."/>
 
-        <meta property="og:image" content="https://asemorales.me/assets/images/og-image.png">
+        <meta property="og:image" content="https://asemorales.com/assets/images/og-image.png">
 
         <title>CV - Ase Morales</title>
     </head>
