chore: reformat and fix typos

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </head>
     <body>
     <script type="text/javascript">
-        window.location.href = "./cv.pdf"
+        window.location.href = "./Academic CV - Ase Morales.pdf"
     </script>
     </body>
 </html>
